# OOTP-FACE-FORGE

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  ootp_facegen.py  pyproject.toml  requirements.txt
examples/: park_yongtaek.json
scripts/: audit_ingame_faces.py  build_cufp_index.py  build_render_index.py  build_windows_exe.ps1  download_kbo_profile_headshots.py  download_restore_model.py  export_ootp_lookup_fg_files.py  faceforge_gui_entry.py  install_ootp_fg_package.py  make_compare_sheet.py  oracle_fg_search.py  roundtrip_eval.py  smoke_cnn.py  smoke_detail_model.py  train_detail_cnn.py  train_emb2shape.py  train_photofit.py
src/ootp_faceforge/: __init__.py  basis.py  calibrate.py  cli.py  emb2shape.py  fgformat.py  fit.py  glasses.py  glasses_mesh.py  gui.py  identity.py  lab.py  landmarks.py  modeller_fit.py  paths.py  photofit.py  pipeline.py  render.py  render_retrieval.py  restore.py  retrieval.py  texture.py
src/ootp_faceforge/assets/: glasses_templates.json
